Add new test cases like Ascending and descending of product name and price , end to end test case login -- checkout --lockout